--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <body>
     <h1>Мои проекты</h1>
     <ul>
-        <li><a href="/jurnal/">Проект 1</a></li>
-        <li><a href="/ls 7/">Проект 2</a></li>
+        <li><a href="/jurnul/">jurnal</a></li>
+        <li><a href="/l s 7/"> магазин </a></li>
         <li><a href="/#/">Проект 3</a></li>
     </ul>
 </body>
+
 </html>
