--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <body>
     <h1>Мои проекты</h1>
     <ul>
-        <li><a href="/jurnul/">jurnal</a></li>
-        <li><a href="/l s 7/"> магазин </a></li>
+        <li><a href="/jurnul/index.html">jurnal</a></li>
+        <li><a href="/l s 7/index.html"> магазин </a></li>
         <li><a href="/#/">Проект 3</a></li>
     </ul>
 </body>
 
 </html>
+
