--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Project</title>
 </head>
 <body>
     <body>
     <h1>Мои проекты</h1>
     <ul>
-        <li><a href="/jurnul/index.html">jurnal</a></li>
+        <li><a href="../jurnul/index.html">jurnal</a></li>
         <li><a href="/l s 7/index.html"> магазин </a></li>
         <li><a href="/#/">Проект 3</a></li>
     </ul>
 </body>
 
 </html>
+
 
