--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+.html<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,13 +9,14 @@
     <body>
     <h1>Мои проекты</h1>
     <ul>
-        <li><a href="/jurnal/">jurnal</a></li>
+        <li><a href="/jurnal/index.html">jurnal</a></li>
         <li><a href="/l s 7/index.html"> магазин </a></li>
         <li><a href="/#/">Проект 3</a></li>
     </ul>
 </body>
 
 </html>
+
 
 
 
