--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <h1>Мои проекты</h1>
     <ul>
         <li><a href="jurnal/">jurnal</a></li>
-        <li><a href="/l s 7/index.html"> магазин </a></li>
+        <li><a href="l s 7/"> магазин </a></li>
         <li><a href="/#/">Проект 3</a></li>
     </ul>
 </body>
 
 </html>
+
 
 
 
