--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 .html<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project</title>
-</head>
-<body>
-    <body>
-    <h1>Мои проекты</h1>
-    <ul>
-        <li><a href="jurnal/">jurnal</a></li>
-        <li><a href="ls 7/"> магазин </a></li>
-        <li><a href="/#/">Проект 3</a></li>
-    </ul>
-</body>
+        <head>
+                <meta charset="UTF-8">
+                <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+                <title>Gustomyasov S A Projects</title>
+        </head>
+        <body>
+                 <h1>Мои проекты</h1>
+                    <ul class= "project-name>
+                        <li><a href="jurnal/">jurnal</a></li>
+                        <li><a href="ls 7/">Shop</a></li>
+                        <li><a href="/#/">Calculator</a></li>
+                    </ul>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+        </body>
 
 </html>
+
 
 
 
