--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-.html<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
         <head>
                 <meta charset="UTF-8">
@@ -7,8 +7,8 @@
                 <title>Gustomyasov S A Projects</title>
         </head>
         <body>
-                 <h1>Мои проекты</h1>
-                    <ul class= "project-name>
+                <h1>Мои проекты</h1>
+                    <ul class= "project-name">
                         <li><a href="jurnal/">jurnal</a></li>
                         <li><a href="ls 7/">Shop</a></li>
                         <li><a href="/#/">Calculator</a></li>
@@ -17,6 +17,7 @@
         </body>
 
 </html>
+
 
 
 
