--- a/index.html
+++ b/index.html
@@ -7,16 +7,30 @@
                 <title>Gustomyasov S A Projects</title>
         </head>
         <body>
-                <h1>Мои проекты</h1>
-                    <ul class= "project-name">
-                        <li><a href="jurnal/">jurnal</a></li>
-                        <li><a href="l s 7/">Shop</a></li>
-                        <li><a href="/#/">Calculator</a></li>
-                    </ul>
+                <header class="header">
+                 <h1>Мои проекты</h1>
+            </header>
+                    <div class="container text-center">
+                        <div class="row align-items-center">
+                            <div class="col">
+                                <a href="jurnal/">jurnal</a>
+                                <p class="card-text">  Повторение лендинга журнала Бридж без учета функционала </p>
+                             </div>
+                            <div class="col">
+                                <a href="ls 7/">Shop</a>
+                                <p class="card-text">  Примитивный лендинг интернет магазина </p>
+                            </div>
+                            <div class="col">
+                                <a href="№">Calculator</a>
+                                <p class="card-text">  Кальклятор с JS </p>
+                            </div>
+                         </div>
+                    </div>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
         </body>
 
 </html>
+
 
 
 
