--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                                 <p class="card-text">  Примитивный лендинг интернет магазина </p>
                             </div>
                             <div class="col">
-                                <a href="№">Calculator</a>
+                                <a href="Calculator/">Calculator</a>
                                 <p class="card-text">  Кальклятор с JS </p>
                             </div>
                          </div>
@@ -31,6 +31,7 @@
         </body>
 
 </html>
+
 
 
 
