--- a/index.html
+++ b/index.html
@@ -25,12 +25,17 @@
                                 <a href="Calculator/">Calculator</a>
                                 <p class="card-text">  Кальклятор с JS </p>
                             </div>
+                             <div class="col">
+                                <a href="Calculator/">Seata+</a>
+                                <p class="card-text">  Проект визитка-магазин </p>
+                            </div>
                          </div>
                     </div>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
         </body>
 
 </html>
+
 
 
 
