--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                                 <p class="card-text">  Кальклятор с JS </p>
                             </div>
                              <div class="col">
-                                <a href="Electrical">Seata+</a>
+                                <a href="Electrical/">Seata+</a>
                                 <p class="card-text">  Проект визитка-магазин </p>
                             </div>
                          </div>
@@ -35,6 +35,7 @@
         </body>
 
 </html>
+
 
 
 
