--- a/Electrical/index.html
+++ b/Electrical/index.html
@@ -403,8 +403,23 @@
             </div>
         </div>
     </div>
+        <!-- Уведомление о cookies -->
+    <div class="cookies-notification" id="cookiesNotification">
+            <div class="cookies-content">
+                <div class="cookies-text">
+                    <h4>🍪 Мы используем cookies</h4>
+                    <p>Этот сайт использует файлы cookie для улучшения работы и анализа трафика. Продолжая использовать сайт, вы соглашаетесь с нашей политикой использования cookies.</p>
+                </div>
+                <div class="cookies-buttons">
+                    <button class="btn btn-small" onclick="acceptCookies()">Принять</button>
+                    <button class="btn btn-small btn-outline" onclick="openCookiesPolicy()">Подробнее</button>
+                </div>
+            </div>
+    </div>
+
     
     <script src="script/script.js"></script>
    
 </body>
 </html>
+
