--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
                              </div>
                             <div class="col">
                                 <a href="shop/">Shop</a>
-                                <p class="card-text">  Примитивный лендинг интернет магазина </p>
+                                <p class="card-text">  Примитивнуйший лендинг интернет магазина </p>
                             </div>
                             <div class="col">
                                 <a href="Calculator/">Calculator</a>
-                                <p class="card-text">  Кальклятор с JS </p>
+                                <p class="card-text">  Кальклятор с JS (темная тема) </p>
                             </div>
                              <div class="col">
                                 <a href="Electrical/">Seata+</a>
-                                <p class="card-text">  Проект визитка-магазин </p>
+                                <p class="card-text">  Проект визитка-магазин (практически готовый сайт) </p>
                             </div>
                          </div>
                     </div>
@@ -35,6 +35,7 @@
         </body>
 
 </html>
+
 
 
 
