--- a/Electrical/index.html
+++ b/Electrical/index.html
@@ -16,7 +16,7 @@
                 <div class="logo">
                     <div class="logo-icon">⚡</div>
                     <div class="logo-text">
-                        <h1>ООО "SEATA+"</h1>
+                        <h1>ООО «SEATA+»</h1>
                         <p>Электротовары и профессиональный монтаж</p>
                     </div>
                 </div>
@@ -208,7 +208,7 @@
             <h2 class="section-title">О компании</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>ООО "SEATA+" - Молодая компания, успевшая зарекомендовать себя как надежный поставщик электротоваров и профессиональных услуг в области электротехники.</p>
+                    <p>ООО «SEATA+» - Молодая компания, успевшая зарекомендовать себя как надежный поставщик электротоваров и профессиональных услуг в области электротехники.</p>
                     <p>Мы предлагаем широкий ассортимент качественной продукции от ведущих производителей, а также полный комплекс услуг по монтажу и обслуживанию электрооборудования.</p>
                     <p>Продвигаем новаторские решения по управлению комфортом и системами безопасности Вашего дома и производственных помещений.</p>
                     <p>Наша команда состоит из опытных специалистов с соответствующими допусками и сертификатами, что гарантирует высокое качество выполняемых работ.</p>
@@ -318,7 +318,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-column">
-                    <h3>ООО "SEATA+"</h3>
+                    <h3>ООО «SEATA+»</h3>
                     <p>Электроматериалы и профессиональный монтаж. Проверенное годами Качество и надежность.</p>
                 </div>
                 <div class="footer-column">
@@ -349,7 +349,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 ООО "SEATA+". Все права защищены.</p>
+                <p>&copy; 2023 ООО «SEATA+». Все права защищены.</p>
             </div>
         </div>
     </footer>
@@ -398,7 +398,7 @@
                 <p>Безопасность персональных данных, которые обрабатываются Оператором, обеспечивается путем реализации правовых, организационных и технических мер, необходимых для выполнения в полном объеме требований действующего законодательства в области защиты персональных данных.</p>
                 
                 <h3>7. Заключительные положения</h3>
-                <p>Пользователь может получить любые разъяснения по интересующим вопросам, касающимся обработки его персональных данных, обратившись к Оператору с помощью электронной почты info@SEATA+energy.ru.</p>
+                <p>Пользователь может получить любые разъяснения по интересующим вопросам, касающимся обработки его персональных данных, обратившись к Оператору с помощью электронной почты info@seateplus.ru.</p>
                 <p>В данном документе будут отражены любые изменения политики обработки персональных данных Оператором. Политика действует бессрочно до замены ее новой версией.</p>
             </div>
         </div>
@@ -422,5 +422,6 @@
    
 </body>
 </html>
+
 
 
