--- a/Electrical/product.html
+++ b/Electrical/product.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Описание товара - ООО "SEATA+"</title>
+    <title>Описание товара - ООО «SEATA+»</title>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
    <link rel="stylesheet" href="css/product.css">
    
@@ -16,7 +16,7 @@
                 <div class="logo">
                     <div class="logo-icon">⚡</div>
                     <div class="logo-text">
-                        <h1>ООО "SEATA+"</h1>
+                        <h1>ООО «SEATA+»</h1>
                         <p>Электротовары и профессиональный монтаж</p>
                     </div>
                 </div>
@@ -154,7 +154,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-column">
-                    <h3>ООО "SEATA+"</h3>
+                    <h3>ООО «SEATA+»</h3>
                     <p>Электротовары и профессиональный монтаж. Проверенное Качество и надежность.</p>
                 </div>
                 <div class="footer-column">
@@ -167,7 +167,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 ООО "SEATA+". Все права защищены.</p>
+                <p>&copy; 2023 ООО «SEATA+». Все права защищены.</p>
             </div>
         </div>
     </footer>
@@ -405,4 +405,5 @@
     </script> -->
     <script src="script/product.js"></script>
 </body>
+
 </html>
