--- a/index.html
+++ b/index.html
@@ -29,12 +29,17 @@
                                 <a href="Electrical/">Seata+</a>
                                 <p class="card-text">  Проект визитка-магазин (практически готовый сайт) </p>
                             </div>
+                            <div class="col">
+                                <a href="KPRF/">KPRF</a>
+                                <p class="card-text">  Проект Сайта отделения КПРФ г. Нефтеюганска </p>
+                            </div>
                          </div>
                     </div>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
         </body>
 
 </html>
+
 
 
 
