--- a/KPRF/index.html
+++ b/KPRF/index.html
@@ -442,6 +442,14 @@
                 text-align: center;
                 border-bottom: 1px solid rgba(255,255,255,0.1);
             }
+             header {
+                position: relative;
+                top: auto;
+            }
+            .party-name {
+                font-size: 1.4rem;
+                padding: 8px 0;
+            }
             .header-top {
                 flex-direction: column;
                 text-align: center;
@@ -451,7 +459,10 @@
                 grid-template-columns: 1fr;
             }
             .hero {
-                padding: 70px 20px;
+                padding: 40px 20px;
+            }
+            .logo-text h1 {
+                font-size: 1.3rem;
             }
             .hero h2 {
                 font-size: 1.8rem;
@@ -663,4 +674,5 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
+
 </html>
