--- a/KPRF/index.html
+++ b/KPRF/index.html
@@ -592,7 +592,7 @@
             <div class="contact-card">
                 <h3><i class="fas fa-phone"></i> Телефоны</h3>
                 <p>Первый секретарь: +7 922 433 47 00 Баев Алан Тимофеевич
-                <p>Email: kprf-ntyagan@mail.ru</p>
+                <p>Email: kprf-nefteugansk@mail.ru</p>
             </div>
         </div>
 
@@ -676,3 +676,4 @@
 </body>
 
 </html>
+
